--- a/modules/claim_life/doc/fr/CHANGELOG
+++ b/modules/claim_life/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#11169 Correction des depends sur claim.loss.get_date
 * BUG#11285 Correction du filtre sur les périodes de couverture théorique
 * BUG#11245 Correction de typos sur manual_end_date et full_management_start_date
 * BUG#11107 Correction de la date de préjudice initial utilisée en cas de rechute ou d'invalidité
