contract_insurance_invoice: fix installment of fee invoices (#2651)
Fix #11238

--- a/modules/contract_insurance_invoice/doc/en/CHANGELOG
+++ b/modules/contract_insurance_invoice/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#11238 Fix installment of fee invoices
 * BUG#10985 Fix incoherence between the start date of activated contract and the start date of its invoices
 * BUG#9867 Add error message if no address is found when finalizing invoices
 * OTH#00000 Fix crash during previously posted invoices check
