--- a/modules/claim/doc/en/CHANGELOG
+++ b/modules/claim/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#11310 Remove constraint on dates of contract's claim bank account
 * FEA#11263 Add a link between a service and the service that was its origin
 * FEA#11113 Store the claim bank account on contracts when appropriate
 * FEA#11188 Add my history to claim entry point
