endorsement_option_benefit: Clean up option versions (#2665)
Fix #11042

--- a/modules/endorsement_option_benefit/doc/en/CHANGELOG
+++ b/modules/endorsement_option_benefit/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#11042 Only create new option versions on modified options
 * BUG#10965 Fix annuity frequency display when it is not forced
 * BUG#10171 Add parent name in option list
 
