endorsement_premium: keep all premiums in current premiums (#2677)
Fix #0000

--- a/modules/endorsement_premium/doc/en/CHANGELOG
+++ b/modules/endorsement_premium/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#0000: Iteration on redmine 11052: we have to keep all premium values in current premiums preview
 * FEA#11052 Only display premiums which will be valid after endorsement application in premium endorsment preview
 
 Version 2.2 - 2018-10-12
