--- a/modules/endorsement_premium/doc/fr/CHANGELOG
+++ b/modules/endorsement_premium/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#0000: Itération sur la redmine 11052: il faut garder toutes les valeurs des primes dans la prévisualisation des primes courantes
 * FEA#11052 Afficher uniquement les primes valides après application de l'avenant dans la prévisualisation de l'avenant de changement de primes
 
 Version 2.2 - 2018-10-12
