contract_underwriting: add premium and exclusions to underwriting lines (#2661)
* contract_underwriting: add premium and exclusions to underwriting lines

--- a/modules/contract_underwriting/doc/fr/CHANGELOG
+++ b/modules/contract_underwriting/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#11249 Affichage des exclusions et surprimes sur les lignes d'analyse de risque
 * BUG#11143 Filtrer les données complémentaires de type "analyse de risques" sur les contrats / garanties souscrites
 
 Version 2.2 - 2018-10-12
