--- a/modules/contract_underwriting/doc/en/CHANGELOG
+++ b/modules/contract_underwriting/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#11249 Display extra premium and exclusions to underwriting lines
 * BUG#11143 Remove underwriting extra data from contracts / options
 
 Version 2.2 - 2018-10-12
