claim_pasrau: Manage even numbered tax lines in invoices (#2689)
Fix #11321

--- a/modules/claim_pasrau/doc/en/CHANGELOG
+++ b/modules/claim_pasrau/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#11321 Somehow manage invoices with even number of pasrau lines
 * BUG#10972 Fix coherence of Pasrau declaration due to rounding of lines sum versus sum of rounded lines
 * BUG#10919 Raise a warning rather than an error when trying to post a dsn invoice without the dsn configuration done
 * OTH#00000 Fix super call following #10638
