claim: Make origin_service usage safer (#2687)
* claim: Make origin_service usage safer

--- a/modules/claim/doc/en/CHANGELOG
+++ b/modules/claim/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#00000 Improve controls when using service origins
 * BUG#11310 Remove constraint on dates of contract's claim bank account
 * FEA#11263 Add a link between a service and the service that was its origin
 * FEA#11113 Store the claim bank account on contracts when appropriate
