--- a/modules/endorsement_party/doc/fr/CHANGELOG
+++ b/modules/endorsement_party/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* FEA#8610 Ajout de vérifications sur les avenants d'adresses de tiers en fonction de la configuration du pays
+
 Version 2.2 - 2018-10-12
 * BUG#9612 Correction d'un crash sur l'aveant de modification du rattachement social en vérifiant l'existence de 'previous_relation'
 
