contract_insurance_health_fr: allow to change ssn on social security dependents (#2678)
Fix #11299

--- a/modules/contract_insurance_health_fr/doc/en/CHANGELOG
+++ b/modules/contract_insurance_health_fr/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#11299 Hot fix: allow to change ssn on social security dependent parties
 * FEA#10793 Add batch to create annual report templates according to the Madelin law
 
 Version 2.2 - 2018-10-12
