offered_eligibility: fix looping warning message (#2664)
Fix #11271

--- a/modules/offered_eligibility/doc/en/CHANGELOG
+++ b/modules/offered_eligibility/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* BUG#11271 Index bad dates warning message on option creation with more meaningful data as id can create a loop in some cases
+
 Version 2.2 - 2018-10-12
 * BUG#2197 Check eligibility before anything else in calculate
 
