account_cog: Add mechanism to postpone account reconciliation (#2627)
Fix #11198

--- a/modules/account_cog/doc/en/CHANGELOG
+++ b/modules/account_cog/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* FEA#11198 Add possibility into the account reconciliation wizard to postpone propsitions
+
 Version 2.2 - 2018-10-12
 * FEA#10048 Add tags to account
 * FEA#9417 Sort reconciliations by ID descending
