--- a/modules/account_cog/doc/fr/CHANGELOG
+++ b/modules/account_cog/doc/fr/CHANGELOG
@@ -1,3 +1,5 @@
+* FEA#11198 Ajout de la possibilité de remettre à plus tard les propositions de lettrage dans l'assistant "Lettrer les comptes"
+
 Version 2.2 - 2018-10-12
 * FEA#10048 Ajout des labels sur les comptes comptables
 * FEA#9417 Tri des lettrages par identifiant décroissant
