--- a/modules/report_engine_email/doc/fr/CHANGELOG
+++ b/modules/report_engine_email/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#11087 Correctif de l'impression de courrier avec édition manuelle active
 * BUG#10112 Ajout de l'email sélectionné dans le contexte d'impression
 
 Version 2.2 - 2018-10-12
