--- a/modules/claim_life/doc/en/CHANGELOG
+++ b/modules/claim_life/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#11365 Add first ltd start date in rule engine
 * BUG#11169 Fix depends on claim.loss.get_date
 * BUG#11285 Fix filter on theoretical covered period
 * BUG#11245 Fix typos on manual_end_date and full_management_start_date
