--- a/modules/claim_life/doc/fr/CHANGELOG
+++ b/modules/claim_life/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#11365 Ajout de la donnée date de début du premier évènement d'invalidité du sinistre dans le moteur de règle
 * BUG#11169 Correction des depends sur claim.loss.get_date
 * BUG#11285 Correction du filtre sur les périodes de couverture théorique
 * BUG#11245 Correction de typos sur manual_end_date et full_management_start_date
