--- a/modules/claim_group_life_fr/doc/fr/CHANGELOG
+++ b/modules/claim_group_life_fr/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#11383 Correctif du calcul du montant d'une période dans la règle par défaut de limitation des prestations annexes
 * OTH#00000 Hotfix: arrondis dans les règles livrées par défaut
 * BUG#00000 Ajout de la rente SS dans les détails complémentaires
 * BUG#10783 Le règle d'invalidité par défaut prend désormais un montant de rente SS sur la période et non l'année 
