reporte_engine: add user notification for async report production (#2708)
Fix #11413

--- a/modules/report_engine/locale/fr.po
+++ b/modules/report_engine/locale/fr.po
@@ -78,6 +78,14 @@ msgctxt "error:report.template:"
 msgid "The document template code must be unique"
 msgstr "Le code du modèle de courrier doit être unique"
 
+msgctxt "error:report.template:"
+msgid ""
+"Your reports have been produced:\n"
+"%(reports)s"
+msgstr ""
+"Vos documents ont été produits:\n"
+"%(reports)s"
+
 msgctxt "field:event.type.action,report_templates:"
 msgid "Report Templates"
 msgstr "Modèles de courrier"
