--- a/modules/report_engine/doc/en/CHANGELOG
+++ b/modules/report_engine/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#11414 Notify the user when an asynchronous printing job is done
 * BUG#11090 Add TodayTime to the context report generation and genshi
 * OTH#00000 Properly use datetime in report engine
 * BUG#10951 Take micro seconds into account in default time extension for reports name
